fixtures/frontend/milestone-2/invalid/interpolated-pattern-text/main.aivi
value subject = "Ada"

value result =
    subject
     ||> "{subject}" -> 1
